--- a/compose.yaml
+++ b/compose.yaml
@@ -1,18 +1,15 @@
 services:
   localstack:
-    container_name: "${LOCALSTACK_DOCKER_NAME-localstack_dev}"
+    container_name: "${LOCALSTACK_DOCKER_NAME:-localstack_test}"
     image: localstack/localstack
     ports:
       - "127.0.0.1:4566:4566"            # LocalStack Gateway
       - "127.0.0.1:4510-4559:4510-4559"  # external services port range
-      - "127.0.0.1:53:53"                # DNS config (only required for Pro)
-      - "127.0.0.1:53:53/udp"            # DNS config (only required for Pro)
-      - "127.0.0.1:443:443"              # LocalStack HTTPS Gateway (only required for Pro)
     environment:
-      - DEBUG=${DEBUG-}
-      - PERSISTENCE=${PERSISTENCE-}
-      - LAMBDA_EXECUTOR=${LAMBDA_EXECUTOR-}
-      - LOCALSTACK_API_KEY=${LOCALSTACK_API_KEY-}  # only required for Pro
+      - # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
+      - SERVICES=sns, sqs
+      - DEBUG=${DEBUG:-false}
+      - PERSISTENCE=${PERSISTENCE:-true}
       - DOCKER_HOST=unix:///var/run/docker.sock
     volumes:
       - "${LOCALSTACK_VOLUME_DIR:-./volume}:/var/lib/localstack"
