--- a/compose.yaml
+++ b/compose.yaml
@@ -6,7 +6,7 @@ services:
       - "127.0.0.1:4566:4566"            # LocalStack Gateway
       - "127.0.0.1:4510-4559:4510-4559"  # external services port range
     environment:
-      - # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
+      # LocalStack configuration: https://docs.localstack.cloud/references/configuration/
       - SERVICES=sns, sqs
       - DEBUG=${DEBUG:-false}
       - PERSISTENCE=${PERSISTENCE:-true}
